# qwen-ocr

./: .gitignore  AGENTS.md  Justfile  callbacks.py  common.py  config.py  demo_ui.py  gc_profiler.py  main.py  pdf_handler.py  pdf_ocr.py  processing.py  pyproject.toml  schema.py  ui.py  utils.py
agents/tasks/: gui_port_plan.md  image_filmstrip_specification.md  markdown_viewer_implementation.md  spec_example.html  statusbar_specification.md  workbench.md
components/: __init__.py  config_panel.py  file_browser.py  fs_watcher.py  image_filmstrip.py  image_frame.py  markdown_viewer.py  statusbar.py  tree_item.py
dialogs/: config_dialog.py
frontend/: .editorconfig  package.json
frontend/src/: App.tsx  global.d.ts
frontend/src/hooks/: pythonBridge.ts
frontend/src/utils/: logger.ts
models/: callbacks.py  image_metadata.py  tab_data.py
src/: .gitignore  config.py  main.py  main.py-e  pdf_handler.py  processing.py  utils.py
src/models/: api_schemas.py  callbacks.py  document_job.py  extracted_image.py  image_metadata.py  page_models.py
tests/: test_config_panel.py  test_file_browser.py  test_footnotes.py  test_image_filmstrip.py  test_markdown_viewer.py  test_poc.py  test_statusbar.py
