[project]
name = "qwen-ocr"
version = "0.1.0"
description = "Multi-Page PDF OCR using Qwen3-VL-235B model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "Pillow",
    "pdf2image",
    "PyPDF2",
    "tiktoken",
    "rich>=14.2.0",
    "pywebview>=6.1",
    "cryptography>=46.0.3",
]

[dependency-groups]
dev = [
    "ty>=0.0.3",
]
